--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "react-scripts": "0.8.2"
   },
   "dependencies": {
+    "d3-axis": "^1.0.8",
+    "d3-interpolate": "^1.1.6",
+    "d3-scale": "^2.0.0",
+    "d3-selection": "^1.3.0",
+    "prop-types": "^15.6.1",
     "react": "^15.4.1",
     "react-dom": "^15.4.1"
   },
